<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.CardDetailsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview_back_arrow"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
           
            android:gravity="center_vertical"
            android:text="Payment"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageview_back_arrow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
        app:layout_constraintBottom_toTopOf="@id/button_proceed_to_payment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/textview_label_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              
                android:text="@string/card_holder_name"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/edittext_card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
              
                android:hint="@string/card_holder_name"
                android:padding="13dp"
                android:maxLength="16"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_label_card_name" />
            <TextView
                android:id="@+id/textview_label_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              
                android:text="@string/card_number"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_card_name" />
            <EditText
                android:id="@+id/edittext_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
              
                android:hint="@string/xxxx_xxxx_xxxx_xxxx"
                android:padding="13dp"
                android:maxLength="19"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_label_card_number" />
            <LinearLayout
                android:id="@+id/ll_card_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_card_number">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_expiry_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                      
                        android:text="@string/expiry_date"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview_billing_address" />

                    <EditText
                        android:id="@+id/edittext_expiry_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext"
                      
                        android:hint="@string/mm_yy"
                        android:inputType="number"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:padding="13dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview_address" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_label_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                      
                        android:text="@string/cvv"
                        android:textSize="14sp"
                        />

                    <EditText
                        android:id="@+id/edittext_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext"
                      
                        android:hint="@string/cvv"
                        android:maxLength="3"
                        android:inputType="number"
                        android:padding="13dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview_address" />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/textview_label_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              
                android:text="@string/country"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_card_details" />
            <EditText
                android:id="@+id/edittext_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
              
                android:hint="@string/country"
                android:padding="13dp"
                android:inputType="textPersonName"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_label_country" />
            <TextView
                android:id="@+id/textview_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              
                android:text="@string/postal_code"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_country" />
            <EditText
                android:id="@+id/edittext_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
              
                android:hint="@string/postal_code"
                android:padding="13dp"
                android:inputType="textPersonName"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_postal_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_proceed_to_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/proceed_to_payment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>