<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview_back_arrow"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
           
            android:gravity="center_vertical"
            android:text="Address Details"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageview_back_arrow"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
        app:layout_constraintBottom_toTopOf="@id/button_proceed_to_payment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_address_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textview_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:text="Name"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
            
                android:hint="Enter name"
                android:imeOptions="actionNext"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_name" />
            <TextView
                android:id="@+id/textview_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:text="Mobile"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_name" />
            <EditText
                android:id="@+id/edittext_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
            
                android:hint="Enter mobile"
                android:imeOptions="actionNext"
                android:maxLength="10"
                android:inputType="number"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_mobile" />
            <TextView
                android:id="@+id/textview_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:text="Email"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_mobile" />
            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
            
                android:hint="Enter email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:padding="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_email" />
            <TextView
                android:id="@+id/textview_building_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            
                android:text="@string/building_name"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_email" />
            <EditText
                android:id="@+id/edittext_building_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
            
                android:hint="@string/enter_building_name"
                android:padding="13dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_building_name" />
            <LinearLayout
                android:id="@+id/ll_address_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_building_name">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                    
                        android:text="@string/postal_code"
                        android:textSize="14sp"
                        />

                    <EditText
                        android:id="@+id/edittext_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/rounded_edittext"
                    
                        android:hint="@string/postal_code"
                        android:maxLength="7"
                        android:inputType="textPersonName"
                        android:padding="15dp"
                        android:imeOptions="actionNext"
                       />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                    
                        android:text="@string/area"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edittext_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/rounded_edittext"
                    
                        android:hint="@string/area"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:padding="13dp"
                        />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/textview_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
            
                android:text="@string/address_label_optional"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_address_details" />
            <EditText
                android:id="@+id/edittext_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
            
                android:hint="@string/address_label"
                android:padding="13dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_address_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_proceed_to_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/proceed_to_payment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>